--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - POSTGRES_DB=root
     ports: 
       - 5432:5432
+    volumes:
+      - $HOME/postgres:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
