--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@babel/runtime": "^7.16.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.1"
   },
